fix: improved pty alt buffer mode
this eliminates the "horizontal landing zone" drag region

Fixes #1399

--- a/plugins/plugin-bash-like/web/css/xterm.css
+++ b/plugins/plugin-bash-like/web/css/xterm.css
@@ -22,11 +22,9 @@ tab.xterm-alt-buffer-mode .repl-inner .repl-block.processing {
     padding: 0;
     -webkit-app-region: no-drag; /* but make sure the content of the blocks are not draggable */
 }
-tab.xterm-alt-buffer-mode .repl-inner .repl-block.processing .xterm-container {
-    border: 1px solid var(--color-base02);
-}
 tab.xterm-alt-buffer-mode .repl {
     background: var(--color-stripe-01);
+    align-items: flex-end; /* snap emacs, vi, nano to the right */
 }
 tab.xterm-alt-buffer-mode .repl-block:not(.processing), tab.xterm-alt-buffer-mode .repl-input, tab.xterm-alt-buffer-mode .repl-result-spinner {
     display: none;
