fix: various fixes for tab management
we were using tab.visible selectors in a racy fasion in a number of places
related, the new tab logic was clearing racily w.r.t. output in the prior tab

Fixes #1411

--- a/plugins/plugin-bash-like/web/css/xterm.css
+++ b/plugins/plugin-bash-like/web/css/xterm.css
@@ -69,8 +69,8 @@ tab:not(.xterm-alt-buffer-mode) .xterm.xterm-empty-row-heuristic .xterm-rows > d
     font-size: 1em !important;
 }
 .xterm-terminated .xterm-rows > div {
-    height: 1.2875em !important;
-    line-height: 1.2875em !important;
+    height: auto !important;
+    line-height: normal !important;
 }
 .xterm-container .xterm-rows > div > span {
     width: auto !important;
