fix(packages/app): missing right-pad on tables
Fixes #1428

--- a/packages/app/web/css/left-tab-stripe.css
+++ b/packages/app/web/css/left-tab-stripe.css
@@ -198,6 +198,9 @@ body.subwindow .repl .horizontal-landing-zone {
 .repl.sidecar-visible .repl-input, .repl.sidecar-visible .repl-output {
     padding-left: 1em;
 }
+.repl.sidecar-visible .repl-output {
+    padding-right: 1em;
+}
 
 #help-button.left-tab-stripe-button {
     display: flex;
