fix(packages/app): code-style text in repl is too small
Fixes #1473

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -1082,6 +1082,10 @@ sidecar.entity-is-actions:not(.entity-is-sequence) .action-source, sidecar .acti
     white-space: pre-wrap;
     background: transparent;
 }
+.repl-result code.hljs {
+    /* avoid nested 0.875em from .repl-result and the above code.hljs */
+    font-size: 1em;
+}
 .package-content-count {
     font-weight: bold;
 }
