feat(packages/app): add tooltips to new tab and theme buttons
Fixes #1491

--- a/packages/app/web/css/left-tab-stripe.css
+++ b/packages/app/web/css/left-tab-stripe.css
@@ -66,7 +66,7 @@ body.os-darwin .left-tab-stripe {
 .left-tab-stripe-button:not([data-tab-button-index]) i {
     color: rgba(255,255,255,0.25) !important;
 }
-.left-tab-stripe-button:not([data-tab-button-index]):after {
+.left-tab-stripe-button:not([data-tab-button-index]):not([data-balloon]):after {
     content: ''
 }
 .left-tab-stripe-buttons .left-tab-stripe-button:not(.left-tab-stripe-button-selected) {
