--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -55,10 +55,10 @@
           </div>
         </div>
         <div class='left-tab-stripe-bottom-buttons'>
-          <div class='left-tab-stripe-button new-tab-button smaller-button' id='new-tab-button'>
+          <div class='left-tab-stripe-button new-tab-button smaller-button' id='new-tab-button' data-balloon='Open a new tab' data-balloon-pos='right' data-balloon-length='fit'>
             <i class='fas fa-plus repl-prompt-right-element-icon deemphasize'></i>
           </div>
-          <div class='left-tab-stripe-button theme-button smaller-button' id='theme-button'>
+          <div class='left-tab-stripe-button theme-button smaller-button' id='theme-button' data-balloon='Choose a color theme' data-balloon-pos='right' data-balloon-length='fit'>
             <i class='fas fa-brush'></i>
           </div>
           <div class='left-tab-stripe-button smaller-button' id='help-button'>
