fix: multiple fixes for tab management
Fixes #1493

--- a/packages/app/web/css/left-tab-stripe.css
+++ b/packages/app/web/css/left-tab-stripe.css
@@ -13,6 +13,10 @@ tab {
 tab.visible {
     display: flex;
 }
+tab:not(:first-child).visible {
+    /* split screen separator */
+    border-top: 2px solid var(--color-base03);
+}
 
 body.not-electron .application-name {
     display: flex;
