feat: pty table parsing
Fixes #1516

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -288,7 +288,7 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
 }
 .repl .result-as-table .result-table {
     /* repl table */
-    width: 100%;
+    /* width: 100%; */
 }
 .repl-prompt {
     color: var(--color-text-02);
@@ -527,7 +527,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-.repl.sidecar-visible .result-table .entity-name-group {
+.repl.sidecar-visible .result-table .entity-name-group:not(.entity-name-group-narrow) {
     /* extra magic to get text ellipsis working; this needs width: 100% on enclosing tables */
     width: 100%;
     max-width: 0; /* important! 0 not 0% */
