feat: pty table parsing
Fixes #1516

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -288,7 +288,7 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
 }
 .repl .result-as-table .result-table {
     /* repl table */
-    width: 100%;
+    /* width: 100%; */
 }
 .repl-prompt {
     color: var(--color-text-02);
