fix(plugins/plugin-bash-like): pty sizing and resizing issues
Fixes #1525

--- a/packages/app/web/css/left-tab-stripe.css
+++ b/packages/app/web/css/left-tab-stripe.css
@@ -196,6 +196,9 @@ body.subwindow .repl .horizontal-landing-zone {
     padding: 0 0 0 1em;
     transition: padding 150ms ease-in-out;
 }
+.repl-result > div {
+    padding-right: 1em;
+}
 .repl-prompt-right-elements {
     padding-right: 1em;
 }
