feat: tekton log navigation support
plus some core and k8s enhancements to help

depends on #1608

Fixes #1609

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -1441,6 +1441,9 @@ sidecar .result-as-table .big-top-pad:first-child {
 .clickable, .clickable-block {
     transition: color 150ms ease-in-out, text-decoration-color 150ms ease-in-out;
 }
+.clickable-color {
+    color: var(--color-base09);
+}
 .clickable-blatant {
     text-decoration: underline;
     text-decoration-color: var(--color-base04);
@@ -2747,7 +2750,7 @@ sidecar .sidecar-header-icon {
 .header .clickable:hover {
     color: var(--color-support-04);
 }
-.clickable:hover, .entity.actions:hover .entity-name-group:not(.header-cell) .entity-name {
+.clickable:not(.clickable-color):hover, .entity.actions:hover .entity-name-group:not(.header-cell) .entity-name {
     color: var(--color-brand-01);
 }
 
