fix(plugins/plugin-bash-like): pty line reflow bug when window gets narrower
Fixes #1630

--- a/plugins/plugin-bash-like/web/css/xterm.css
+++ b/plugins/plugin-bash-like/web/css/xterm.css
@@ -7,7 +7,8 @@
 }
 .xterm-terminated .xterm-rows > div {
     width: auto !important; 
-    height: 1.14375em !important; /* a bit different; we need to support resize post-termination */
+    min-height: 1.14375em !important; /* a bit different; we need to support resize post-termination */
+    height: auto !important; /* min-height and height: see https://github.com/IBM/kui/issues/1630 */
     line-height: normal !important; /* ibid */
 }
 .xterm-container .xterm-rows > div > span {
