fix: improvements to ascii-to-table
also a few related fixes to table CSS for overflow-x

Fixes #1572

--- a/packages/app/web/css/left-tab-stripe.css
+++ b/packages/app/web/css/left-tab-stripe.css
@@ -196,7 +196,7 @@ body.subwindow .repl .horizontal-landing-zone {
     padding: 0 0 0 1em;
     transition: padding 150ms ease-in-out;
 }
-.repl-result > div {
+.repl-result > div, .repl-result .result-table-outer {
     padding-right: 1em;
 }
 .repl-prompt-right-elements {
