--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -190,6 +190,9 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
     table-layout: fixed;
     width: 100%;
 }
+.result-table .cell-inner {
+    white-space: pre-wrap;
+}
 .result-as-table .result-table-outer-wrapper {
     /* repl table */
     display: table-row;
