--- a/plugins/plugin-core-support/web/css/tab-completion.css
+++ b/plugins/plugin-core-support/web/css/tab-completion.css
@@ -1,48 +1,26 @@
 .tab-completion-temporary {
     margin-top: 0.375em;
-    display: inline-block;
-    background: var(--color-field-01);
-    flex-direction: column;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,.1);
-    width: 24em;
-    font-size: 0.75rem;
-    position: relative;
+    font-size: 0.75em;
+    border-left: 1ex solid var(--color-base05);
 }
 
-.tab-completion-temporary:after {
-	bottom: 100%;
-	left: 1ex;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;
-	border-color: rgba(136, 183, 213, 0);
-	border-bottom-color: rgba(85,150,230,.2); /* matches selected color, with a bit more alpha */
-	border-width: 1ex;
-	margin-left: -1ex;
-}
+.tab-completion-temporary .tab-completion-scroll-container {
+    display: flex;
+    flex-wrap: wrap;
+ }
 
-.tab-completion-temporary .scrollable {
-    max-height: calc(10 * 1.75em);
-    overflow-y: auto;
-}
+.tab-completion-temporary .tab-completion-scroll-container > div {
+    min-width: 16.667%;
 
-.tab-completion-temporary .scrollable > div {
-    font-weight: 600;
-    overflow: hidden;
     padding: 1em 1.5em 1em 1em;
     text-decoration: none;
-    text-overflow: ellipsis;
 
-    color: var(--color-carbon-components-h3);
-    display: flex;
-    align-items: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-.tab-completion-temporary .scrollable > div > .tab-completion-temporary-fill {
+.tab-completion-temporary .tab-completion-scroll-container > div > .tab-completion-temporary-fill {
     /* the clickable should fill available horizontal space in a completion row */
     flex: 1;
 }
@@ -54,16 +32,27 @@
 }
 
 /* selection */
-.tab-completion-temporary .scrollable > div.selected, .tab-completion-temporary .scrollable > div:hover {
-    background-color: rgba(85,150,230,.1);
+.tab-completion-temporary .tab-completion-scroll-container > div.selected, .tab-completion-temporary .tab-completion-scroll-container > div:hover {
+    background-color: var(--color-ui-05);
 }
-.tab-completion-temporary:hover .scrollable > div.selected:not(:hover) .clickable {
+.tab-completion-temporary:hover .tab-completion-scroll-container > div.selected:not(:hover) {
+    background-color: transparent;
+}
+.tab-completion-temporary:hover .tab-completion-scroll-container > div.selected:not(:hover) .clickable {
     border-bottom-color: transparent;
     color: inherit;
 }
-.tab-completion-temporary .scrollable > div.selected .clickable, .tab-completion-temporary .scrollable > div:hover .clickable {
-    color: var(--color-text-01);
+.tab-completion-temporary .tab-completion-scroll-container > div.selected .clickable, .tab-completion-temporary .tab-completion-scroll-container > div:hover .clickable {
 }
-.tab-completion-temporary .scrollable > div:hover .clickable, .tab-completion-temporary .scrollable > div.selected .clickable {
+.tab-completion-temporary .tab-completion-scroll-container > div:hover .clickable, .tab-completion-temporary .tab-completion-scroll-container > div.selected .clickable {
     border-bottom-color: var(--color-text-01);
+}
+
+/* prefix match of tab completion entries */
+.tab-completion-option-pre {
+    color: var(--color-base0C);
+    font-weight: 600;
+}
+.selected .tab-completion-option-post {
+    font-weight: 600;
 }
